# tensorscout

./: .gitignore  README.md  notes.txt  pyproject.toml  requirements.in  requirements.txt  setup.py
docs/source/: api.rst  conf.py  index.rst  usage.rst
lib/: module.py
tensorscout/: main.py  module.py
tests/: test_module.py
