[tool.poetry]
name = "tensorscout"
version = "1.1.0"
description = "A Python library for tensor operations powered by parallel processing"
authors = ["andrewrgarcia <garcia.gtr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
